// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outer tokenizer codeblock should parse multiple consequetive codeblocks 1`] = `
Array [
  Object {
    "language": "js",
    "tokens": Object {
      "value": "const a = 1",
    },
    "type": "code-block",
  },
  Object {
    "language": "js",
    "tokens": Object {
      "value": "const b = 2",
    },
    "type": "code-block",
  },
]
`;

exports[`outer tokenizer codeblock should parse the codeblock 1`] = `
Array [
  Object {
    "language": "js",
    "tokens": Object {
      "value": "const a = 1",
    },
    "type": "code-block",
  },
]
`;

exports[`outer tokenizer codeblock should parse the codeblock with multiple lines 1`] = `
Array [
  Object {
    "language": "js",
    "tokens": Object {
      "value": "const a = 1
const b = 2",
    },
    "type": "code-block",
  },
]
`;

exports[`outer tokenizer codeblock should parse the codeblock with multiple lines and a newline 1`] = `
Array [
  Object {
    "language": "js",
    "tokens": Object {
      "value": "const a = 1
const b = 2

const c = 3",
    },
    "type": "code-block",
  },
]
`;

exports[`outer tokenizer codeblock should parse the codeblock without the language 1`] = `
Array [
  Object {
    "language": null,
    "tokens": Object {
      "value": "const a = 1",
    },
    "type": "code-block",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 1`] = `
Array [
  Object {
    "indent": "",
    "raw": "# Heading One Text",
    "tokens": Object {
      "level": "#",
      "value": "Heading One Text",
    },
    "type": "heading",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 2`] = `
Array [
  Object {
    "indent": "",
    "raw": "## Heading Two Text",
    "tokens": Object {
      "level": "##",
      "value": "Heading Two Text",
    },
    "type": "heading",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 3`] = `
Array [
  Object {
    "indent": "",
    "raw": "### Heading Three Text",
    "tokens": Object {
      "level": "###",
      "value": "Heading Three Text",
    },
    "type": "heading",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 4`] = `
Array [
  Object {
    "indent": "",
    "raw": "#### Heading Four Text",
    "tokens": Object {
      "level": "####",
      "value": "Heading Four Text",
    },
    "type": "heading",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 5`] = `
Array [
  Object {
    "indent": "",
    "raw": "##### Heading Five Text",
    "tokens": Object {
      "level": "#####",
      "value": "Heading Five Text",
    },
    "type": "heading",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 6`] = `
Array [
  Object {
    "indent": "",
    "raw": "###### Heading Six Text",
    "tokens": Object {
      "level": "######",
      "value": "Heading Six Text",
    },
    "type": "heading",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 7`] = `
Array [
  Object {
    "indent": "",
    "raw": "- list item text",
    "tokens": Object {
      "value": "list item text",
    },
    "type": "list-item",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 8`] = `
Array [
  Object {
    "indent": "",
    "raw": "1. count item text",
    "tokens": Object {
      "value": "count item text",
    },
    "type": "count-item",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 9`] = `
Array [
  Object {
    "indent": "",
    "raw": "<!-- comment item text -->",
    "tokens": Object {
      "value": "comment item text",
    },
    "type": "comment",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 10`] = `
Array [
  Object {
    "indent": "",
    "raw": "- [ ] checkbox item text",
    "tokens": Object {
      "value": "checkbox item text",
    },
    "type": "check-box",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 11`] = `
Array [
  Object {
    "indent": "",
    "raw": "- [x] checked checkbox item text",
    "tokens": Object {
      "value": "checked checkbox item text",
    },
    "type": "check-box-checked",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 12`] = `
Array [
  Object {
    "indent": "",
    "raw": "> quote item text",
    "tokens": Object {
      "value": "quote item text",
    },
    "type": "quote",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 13`] = `
Array [
  Object {
    "indent": "",
    "raw": "> > quote item text",
    "tokens": Object {
      "value": "> quote item text",
    },
    "type": "quote",
  },
]
`;

exports[`outer tokenizer common tokens should parse the common tokens 14`] = `
Array [
  Object {
    "indent": "",
    "raw": "![alt text](image.png)",
    "tokens": Object {
      "alt": "alt text",
      "url": "image.png",
    },
    "type": "image",
  },
]
`;

exports[`outer tokenizer paragraph should parse a paragarph as it is 1`] = `
Array [
  Object {
    "raw": "some plain text",
    "tokens": Object {
      "value": "some plain text",
    },
    "type": "paragraph",
  },
]
`;
